# Federated-Learning-for-Inference-at-Anytime-and-Anywhere

./: README.md  main.py  personal_commands.py  pyproject.toml  requirements.txt  run_fl_simulation_cifar.sh  strategy.py  utils.py
datasets/: dataset_utils.py  personalization_celeba.py  personalization_cifar.py  speech_commands.py
datasets/leaf/: dataloader.py  pickle_dataset.py
models/: __init__.py  accumulator.py  adapter.py  vision_transformer.py
