[build-system]
requires = [
    "poetry==1.1.13",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flower_simulation"
version = "0.1.0"
description = "Federated Learning Simulation with Flower and PyTorch"
authors = ["The Flower Authors <enquiries@flower.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
flwr = {extras = ["simulation"], version = "^0.17.0"}
# flwr = {extras = ["simulation"], path = "../../", develop = true }  # Development
torch = "1.12.0"
torchvision = "0.12.0"
